--- a/index.html
+++ b/index.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic">
   <link rel="stylesheet" href="css/main.css">
   <title>Код и Магия</title>
 </head>
+
 <body>
 
-<header>
-  <div class="header-clouds"></div>
-  <div class="header-fence"></div>
-  <div class="header-tree"></div>
+  <header>
+    <div class="header-clouds"></div>
+    <div class="header-fence"></div>
+    <div class="header-tree"></div>
 
-  <h1 class="header-title section-title">
+    <h1 class="header-title section-title">
     Code&thinsp;and&thinsp;Magick
     <img src="img/title-site.png" alt="Code and magick">
   </h1>
-  <p class="header-description">
-    Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут
-    Пендальф Синий.
-    Вместе с ним вас ждет увлекательное приключение&hellip;
-  </p>
+    <p class="header-description">
+      Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут Пендальф Синий. Вместе с ним вас ждет увлекательное приключение&hellip;
+    </p>
 
-  <div class="demo"></div>
-</header>
+    <div class="demo"></div>
+  </header>
 
 
-<footer>
-  <p><a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy"
-                                                              width="130">Сделано в HTML Academy</a>в 2017 году</p>
-</footer>
+  <footer>
+    <p>
+      <a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy" width="130">Сделано в HTML Academy</a>в 2017 году</p>
+  </footer>
+  <script>
+    var fireballSize = 22;
+    wizardSpeed = 3;
+    wizardWidth = 70;
+    var getFireballSpeed = fireballSpeed;
+    var getWizardHeight = calcWizardHeight;
 
-<script src="js/game.js" type="application/javascript"></script>
+    function fireballSpeed(left) {
+      left == true ? left = 5 : left = 2;
+      return left;
+    };
+
+    function calcWizardHeight(WizardHeight) {
+      1.337 * wizardWidth;
+      return WizardHeight;
+    };
+
+    function getWizardX(width) {
+      var positionWizardX;
+      positionWizardX = (width - wizardWidth) / 2;
+      return positionWizardX;
+    };
+
+    function getWizardY(height) {
+      var positionWizardY;
+      positionWizardY = height - height / 3 * 2;
+      return positionWizardY;
+    };
+  </script>
+  <script src="js/game.js" type="application/javascript"></script>
 
 </body>
+
 </html>
