--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic">
   <link rel="stylesheet" href="css/main.css">
   <title>Код и Магия</title>
 </head>
+
 <body>
 
-<header>
-  <div class="header-clouds"></div>
-  <div class="header-fence"></div>
-  <div class="header-tree"></div>
+  <header>
+    <div class="header-clouds"></div>
+    <div class="header-fence"></div>
+    <div class="header-tree"></div>
 
-  <h1 class="header-title section-title">
+    <h1 class="header-title section-title">
     Code&thinsp;and&thinsp;Magick
     <img src="img/title-site.png" alt="Code and magick">
   </h1>
-  <p class="header-description">
-    Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут
-    Пендальф Синий.
-    Вместе с ним вас ждет увлекательное приключение&hellip;
-  </p>
+    <p class="header-description">
+      Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут Пендальф Синий. Вместе с ним вас ждет увлекательное приключение&hellip;
+    </p>
 
-  <div class="demo"></div>
+    <div class="demo"></div>
 
-  <div class="setup-open">
-    <img src="./img/user-1.jpg" class="setup-open-icon">
-  </div>
-</header>
-
-<div class="overlay setup invisible">
-  <form class="setup-wizard-form">
-    <span class="setup-close">&times;</span>
-
-    <div class="setup-user">
-      <img class="setup-user-pic" src="./img/user-1.jpg" />
-      <input type="text" class="setup-user-name" value="Синий Пендальф" />
+    <div class="setup-open">
+      <img src="./img/user-1.jpg" class="setup-open-icon">
     </div>
+  </header>
 
-    <div class="setup-wizard-appearance">
-      <div class="setup-wizard-wrap">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
+  <div class="overlay setup invisible">
+    <form class="setup-wizard-form">
+      <span class="setup-close">&times;</span>
+
+      <div class="setup-user">
+        <img class="setup-user-pic" src="./img/user-1.jpg" />
+        <input type="text" class="setup-user-name" value="Синий Пендальф" />
+      </div>
+
+      <div class="setup-wizard-appearance">
+        <div class="setup-wizard-wrap">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86" class="setup-wizard">
           <g id="wizard">
             <g id="wizard-coat" style="fill: #6589a4">
@@ -69,45 +69,47 @@
             <rect x="52" width="5" height="5" fill="#acd5fb"/>
           </g>
         </svg>
+        </div>
       </div>
-    </div>
 
-    <div class="setup-fireball-wrap">
-      <div class="setup-fireball"></div>
-    </div>
+      <div class="setup-fireball-wrap">
+        <div class="setup-fireball"></div>
+      </div>
 
-    <div class="setup-artifacts">
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts">
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
 
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
 
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
 
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-    </div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+      </div>
 
-    <button class="button setup-submit">Сохранить</button>
-  </form>
-</div>
+      <button class="button setup-submit">Сохранить</button>
+    </form>
+  </div>
 
-<footer>
-  <p><a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy"
-                                                              width="130">Сделано в HTML Academy</a>в 2017 году</p>
-</footer>
-
-<script src="js/game.js" type="application/javascript"></script>
+  <footer>
+    <p>
+      <a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy" width="130">Сделано в HTML Academy</a>в 2017 году</p>
+  </footer>
+  <script src="js/setup.js"></script>
+  <script src="js/stat.js"></script>
+  <script src="js/game.js" type="application/javascript"></script>
 
 </body>
+
 </html>
